Factored out svn revision strategies into top level interface RevisionStrategy
5/20/11 Added JavaAllSimProject which can be used to build all java sims from "all-sims"
# 00.69.01 (51023) Apr 21, 2011
3/11/2011 upgraded to proguard 4.6, resolves #2778
12/6/10 Fixed codebase issue in deployment code
12/6/10 Common translation deployment fixed up for Flex / Multi-sim Flash support
# 00.69.00 (44133) Sep 16, 2010
# 00.68.07 (44132) Sep 16, 2010
# 00.68.06 (44130) Sep 16, 2010
# 00.68.05 (44128) Sep 16, 2010
# 00.68.04 (44100) Sep 15, 2010
# 00.68.03 (43233) Aug 17, 2010
8/17/10 #2463, fixes for simulations.properties
# 00.68.02 (43225) Aug 17, 2010
8/17/10 #2463, fixes for simulations.properties
# 00.68.01 (43222) Aug 17, 2010
8/17/10 improve support for simulation.properties
8/16/2010 Introduced support for simulation.properties file, which will replace flash-launcher-args.properties, see #2463
7/2/2010 Fixed java compilation so that IDE classpath is not included in classpath when running from IDE, see #2431
6/25/2010 Fixed the name of the web url used by curl during website deploy to figaro, see WebsiteProject around line 81
5/11/2010 Added an optional flag to the build-local.properties file that allows the developer to skip the "enter a change message" dialog, see #2326
5/11/2010 Added tools (commented out) for debugging jar signatures, see #2325
3/24/2010 Updated scalac target from jvm-1.4 to jvm-1.5
3/24/2010 Added time tracking for java project building, see #1943
3/24/2010 Added a command line script that can be used to identify all phet simulations with a declared dependency on the specified project.  See #2122
# 00.68.00 (39074) Mar 3, 2010
3/3/10 Fixing Flash signing issues
# 00.67.00 (39073) Mar 3, 2010
3/3/10 Fixing Flash translation deployment issue
# 00.66.00 (36781) Nov 19, 2009
11/19/09 JARGenerator fixes
# 00.65.00 (36752) Nov 18, 2009
11/18/09 Again
# 00.64.00 (36750) Nov 18, 2009
11/18/09 Fix for Flash common translation deploy